# aoc-2022-cpp

day1/: CMakeLists.txt  Makefile
day1/.cache/clangd/index/: day1-tests.cpp.7DA4291E155B865F.idx  main.cpp.D836849222F72A8B.idx  main.hpp.CF47008CDA219E1F.idx
day1/src/: main.cpp  main.hpp
day1/tests/: CMakeLists.txt
